# EDD_SmartClass_201800524

./: CMakeLists.txt  Estudiantes.csv  Tareas.csv  main.cpp
Controladores/: CEstudiante.cpp  CEstudiante.h  CTarea.cpp  CTarea.h  Salida.cpp
Estructuras/: ColaDeError.cpp  ColaDeError.h  LinealizarMatriz.cpp  LinealizarMatriz.h  ListaDobleEstud.cpp  ListaDobleEstud.h  NodoError.h  NodoEstudiante.cpp  NodoEstudiante.h
Fase 1/: .gitignore  main.cpp
Fase 1/Controladores/: CTarea.cpp  CTarea.h  Salida.cpp  Salida.h
Fase 1/Entradas/: Estudiantes.csv
Fase 1/Estructuras/: ColaDeError.cpp  LinealizarMatriz.cpp  LinealizarMatriz.h  ListaDobleEstud.cpp  NodoError.cpp  NodoEstudiante.cpp  NodoEstudiante.h  NodoMatrizL.cpp  NodoMatrizL.h
Fase 1/Menu/: Menu.cpp  Menu.h
Fase 1/Objetos/: EnumEstado.h  Fecha.cpp  Tarea.h
Fase 1/ReadFile/: ReadCsv.cpp  ReadCsv.h  ReadTareas.cpp
Fase 1/Reportes/: salida19_4_10.txt  salida23_19_31.txt
Fase 3/BackEnd/: main.py
Fase 3/BackEnd/Controller/: NotesController.py  StudentContr.py
Fase 3/BackEnd/Data_Structures/Hash_Table/: Hash_Table.py
Fase 3/BackEnd/Files/: estudiantes.json
Global/: VarGlobal.h
Menu/: Menu.cpp  Menu.h
Objetos/: Error.cpp  Error.h  Estudiante.cpp  Estudiante.h  Fecha.cpp  Fecha.h  Tarea.cpp
ReadFile/: ReadCsv.cpp  ReadCsv.h  ReadTareas.cpp  ReadTareas.h
Reportes/: ColaError.dot  lsEstudiantes.dot  lsEstudiantes16_57_37.dot  lsEstudiantes22_46_13.dot  lsTareas.dot  lsTareas16_57_40.dot  lsTareas22_46_50.dot  salida18_32_25.txt  salida21_50_19.txt  salida22_48_53.txt
(+1 files in other folders)
